--- a/default.hbs
+++ b/default.hbs
@@ -41,11 +41,10 @@
 	{{{body}}}
 
 	<footer class="site-footer">
+		{{#if @blog.twitter}}<a href="{{twitter_url @blog.twitter}}" target="_blank" rel="noopener">Twitter</a>{{/if}}
 		<a class="subscribe icon-feed" href="{{@blog.url}}/rss/"><span class="tooltip">RSS</span></a>
 		<div class="inner">
 			<section class="copyright">{{t "All content copyright"}} <a href="{{@blog.url}}/">{{@blog.title}}</a> &copy; {{date format="YYYY"}} &bull; {{t "All rights reserved."}}</section>
-			<section class="poweredby">{{{t "Proudly published with {ghostlink}" ghostlink="<a class=\"icon-ghost\" href=\"https://ghost.org\">Ghost</a>"}}}</section>
-			<section class="themeinfo"><a href="http://scotthsmith.com/projects/decode/">Decode</a> {{t "by"}} <a href="http://scotthsmith.com">Scott Smith</a></section>
 		</div>
 	</footer>
 
