--- a/index.hbs
+++ b/index.hbs
@@ -9,7 +9,7 @@
 <div class="site-main">
 
 <header class="site-header">	
-	{{#if @blog.title}}<h1 class="blog-title">{{@blog.title}}</h1>{{/if}}
+	<!--{{#if @blog.title}}<h1 class="blog-title">{{@blog.title}}</h1>{{/if}}-->
 	{{#if @blog.description}}<h2 class="blog-description">{{@blog.description}}</h2>{{/if}}
 	
 	{{navigation}}
