--- a/post.hbs
+++ b/post.hbs
@@ -3,7 +3,7 @@
 
 <header class="site-header">
 	{{#if @blog.logo}}<a href="{{@blog.url}}"><img class="blog-logo" src="{{@blog.logo}}" alt="Blog Logo" /></a>{{/if}}
-	{{#if @blog.title}}<h1 class="blog-title"><a href="{{@blog.url}}">{{@blog.title}}</a></h1>{{/if}}
+	<!--{{#if @blog.title}}<h1 class="blog-title"><a href="{{@blog.url}}">{{@blog.title}}</a></h1>{{/if}}-->
 	{{#if @blog.description}}<h2 class="blog-description">{{@blog.description}}</h2>{{/if}}
 
 	{{navigation}}
