--- a/assets/styles/partials/5 Footer.css
+++ b/assets/styles/partials/5 Footer.css
@@ -50,7 +50,7 @@
 	position: absolute;
 	top: -25px;
 	left: 50%;
-	margin-left: -25px;
+	margin-left: 0px;
 	text-align: center;
 	line-height: 2.4rem;
 	border-radius: 50%;
@@ -74,6 +74,47 @@
 	&:active {
 		background-color: var(--secondary-text-color);
 	}
+}
+
+/* The twitter icon on the footer */
+.twitter {
+	width: 50px;
+	height: 50px;
+	position: absolute;
+	top: -25px;
+	left: 50%;
+	margin-left: -55px;
+	text-align: center;
+	line-height: 2.4rem;
+	border-radius: 50%;
+	background-color: var(--accent-color);
+	transition: background-color 0.3s ease;
+
+	/* The RSS icon, inserted via icon font */
+	&::before {
+		color: #FFF;
+		font-size: 26px;
+		position: absolute;
+		top: 5px;
+		left: 12px;
+		font-weight: bold;
+	}
+
+	&:hover {
+		background-color: var(--secondary-accent-color);
+	}
+	
+	&:active {
+		background-color: var(--secondary-text-color);
+	}
+}
+
+.twitter svg {
+    width: auto;
+    height: 35px;
+    position: relative;
+    top: 7px;
+    fill: #fff;
 }
 
 /* CSS tooltip saying "RSS" - initially hidden */
@@ -112,7 +153,13 @@
 }
 
 /* On hover, show the tooltip! */
-.subscribe:hover .tooltip {
+.tooltipable:hover .tooltip {
 	opacity: 1;
 	top: -33px;
+}
+
+.social-bar-icon {
+    height: 20px;
+    width: 20px;
+    display: inline-block;
 }
