Adding prismjs, updating font/bg css

--- a/assets/styles/variables.css
+++ b/assets/styles/variables.css
@@ -1,7 +1,7 @@
 :root {
 	/* Colors */
-	--background-color: #ECEEF0;
-	--text-color: #444444;
+	--background-color: #F6F8FA;
+	--text-color: #222222;
 	--secondary-text-color: #82969C;
 	--accent-color: #009BCD;
 	--secondary-accent-color: #007EA6;
