--- a/assets/styles/partials/6 Floating Header.css
+++ b/assets/styles/partials/6 Floating Header.css
@@ -106,7 +106,8 @@
 }
 
 .floating-header-share-tw,
-.floating-header-share-fb {
+.floating-header-share-fb,
+.floating-header-share-hn {
     display: block;
     align-items: center;
     width: 60px;
@@ -123,6 +124,16 @@
 
 .floating-header-share-fb {
     background: #005e99;
+}
+
+.floating-header-share-hn {
+    background: #fc6300;
+}
+
+/* HN logo is pretty small, make it bigger */
+.floating-header-share-hn svg {
+    width: 25px;
+    height: 25px;
 }
 
 .progress {
@@ -177,7 +188,8 @@
         font-size: 1.5rem;
     }
     .floating-header-share-tw,
-    .floating-header-share-fb {
+    .floating-header-share-fb,
+    .floating-header-share-hn {
         width: 40px;
         height: 40px;
         line-height: 38px;
