Remove extra title block

--- a/default.hbs
+++ b/default.hbs
@@ -38,7 +38,8 @@
 
 		<header class="site-header">
 			{{#if @site.logo}}<a href="{{@site.url}}"><img class="blog-logo" src="{{@site.logo}}" alt="Blog Logo" /></a>{{/if}}
-			{{#if @site.title}}{{#is "home"}}<h1 class="blog-title">{{@site.title}}</h1>{{else}}<div class="blog-title"><a href="{{@site.url}}">{{@site.title}}</a></div>{{/is}}{{/if}}
+			<!--
+			{{#if @site.title}}{{#is "home"}}<h1 class="blog-title">{{@site.title}}</h1>{{else}}<div class="blog-title"><a href="{{@site.url}}">{{@site.title}}</a></div>{{/is}}{{/if}}-->
 			{{#if @site.description}}<p class="blog-description">{{@site.description}}</p>{{/if}}
 
 			{{navigation}}
