Redesign with character

--- a/assets/styles/partials/2 Base Styles.css
+++ b/assets/styles/partials/2 Base Styles.css
@@ -58,6 +58,7 @@ a {
 .post-meta a {
 	transition: color 0.4s ease-in-out, border-bottom 0.4s ease-in-out;
 	border-bottom: 1px solid rgba(127,127,127,0);
+	text-align: left;
 		
 	&:hover {
 		color: var(--accent-color);
@@ -247,7 +248,7 @@ b, strong {
   font-family: 'Oxygen';
   font-style: normal;
   font-weight: 400;
-  src: local('Oxygen Regular'), local('Oxygen-Regular'), url(../fonts/oxygen-latin-ex400.woff2) format('woff2');
+  src: local('Oxygen Regular'), local('Oxygen-Regular'), url(../../fonts/oxygen-latin-ex400.woff2) format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -255,7 +256,7 @@ b, strong {
   font-family: 'Oxygen';
   font-style: normal;
   font-weight: 400;
-  src: local('Oxygen Regular'), local('Oxygen-Regular'), url(../fonts/oxygen-latin400.woff2) format('woff2');
+  src: local('Oxygen Regular'), local('Oxygen-Regular'), url(../../fonts/oxygen-latin400.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
 /* latin-ext */
@@ -263,7 +264,7 @@ b, strong {
   font-family: 'Oxygen';
   font-style: normal;
   font-weight: 700;
-  src: local('Oxygen Bold'), local('Oxygen-Bold'), url(../fonts/oxygen-latin-ex-bold700.woff2) format('woff2');
+  src: local('Oxygen Bold'), local('Oxygen-Bold'), url(../../fonts/oxygen-latin-ex-bold700.woff2) format('woff2');
   unicode-range: U+0100-024F, U+0259, U+1E00-1EFF, U+2020, U+20A0-20AB, U+20AD-20CF, U+2113, U+2C60-2C7F, U+A720-A7FF;
 }
 /* latin */
@@ -271,6 +272,6 @@ b, strong {
   font-family: 'Oxygen';
   font-style: normal;
   font-weight: 700;
-  src: local('Oxygen Bold'), local('Oxygen-Bold'), url(../fonts/oxygen-latin-bold700.woff2) format('woff2');
+  src: local('Oxygen Bold'), local('Oxygen-Bold'), url(../../fonts/oxygen-latin-bold700.woff2) format('woff2');
   unicode-range: U+0000-00FF, U+0131, U+0152-0153, U+02BB-02BC, U+02C6, U+02DA, U+02DC, U+2000-206F, U+2074, U+20AC, U+2122, U+2191, U+2193, U+2212, U+2215, U+FEFF, U+FFFD;
 }
