--- a/assets/styles/variables.css
+++ b/assets/styles/variables.css
@@ -6,6 +6,7 @@
 	--accent-color: #009BCD;
 	--secondary-accent-color: #007EA6;
 	--highlight-color: RGBA(147, 187, 201, 0.5);
+	--button-orange: #f06142;
 	
 	/* Fonts */
 	--font-family: "Oxygen", "Helvetica Neue", "Arial", sans-serif;
