--- a/default.hbs
+++ b/default.hbs
@@ -34,13 +34,26 @@
 
 	<div class="site-main">
 
-		<header class="site-header">
-			{{#if @site.logo}}<a href="{{@site.url}}"><img class="blog-logo" src="{{@site.logo}}" alt="Blog Logo" /></a>{{/if}}
-			<!--
-			{{#if @site.title}}{{#is "home"}}<h1 class="blog-title">{{@site.title}}</h1>{{else}}<div class="blog-title"><a href="{{@site.url}}">{{@site.title}}</a></div>{{/is}}{{/if}}-->
-			{{#if @site.description}}<p class="blog-description">{{@site.description}}</p>{{/if}}
-
-			{{navigation}}
+		<header class="site-header row">
+			<div class="column logo">
+				<div class="row logo-row">
+					{{#if @site.logo}}<a href="{{@site.url}}"><img class="blog-logo" src="{{@site.logo}}" alt="Blog Logo" /></a>{{/if}}
+					<img src='{{asset "images/hacker_chibi_nullsweep_256.png"}}' alt="Hacker Chibi"/>
+				</div>
+				<!--
+				{{#if @site.title}}{{#is "home"}}<h1 class="blog-title">{{@site.title}}</h1>{{else}}<div class="blog-title"><a href="{{@site.url}}">{{@site.title}}</a></div>{{/is}}{{/if}}-->
+				<!--
+				{{#if @site.description}}<p class="blog-description">{{@site.description}}</p>{{/if}}
+			-->
+			</div>
+			<div class="nav-container">
+				<!-- [HAMBURGER menu for mobile] -->
+      			<label for="hamburger">&#9776;</label>
+      			<input type="checkbox" id="hamburger"/>
+				<div class="nav-items">
+					{{navigation}}
+				</div>
+			</div>
 		</header>
 	
 		
@@ -66,7 +79,7 @@
 	</div> {{! end .site-main }}
 
 	{{#is "post, page"}}
-		<script async src='{{asset "scripts/build/main.js"}}'></script>
+		<script async src='{{asset "build/scripts/main.js"}}'></script>
 	{{/is}}
 
 	<script
@@ -75,6 +88,21 @@
 		crossorigin="anonymous">
 	</script>
     <script type="text/javascript" src='{{asset "build/scripts/prism.js"}}'></script>
+    <!-- Matomo Anaylitcs. this is self hosted and totally private, unlike other analytics platforms!
+	<script type="text/javascript">
+	  var _paq = window._paq = window._paq || [];
+	  /* tracker methods like "setCustomDimension" should be called before "trackPageView" */
+	  _paq.push(['trackPageView']);
+	  _paq.push(['enableLinkTracking']);
+	  (function() {
+	    var u="//analytics.nullsweep.com/";
+	    _paq.push(['setTrackerUrl', u+'matomo.php']);
+	    _paq.push(['setSiteId', '1']);
+	    var d=document, g=d.createElement('script'), s=d.getElementsByTagName('script')[0];
+	    g.type='text/javascript'; g.async=true; g.src=u+'matomo.js'; s.parentNode.insertBefore(g,s);
+	  })();
+	</script>
+ End Matomo Code -->
 
 	{{{block "scripts"}}}
 
