--- a/assets/styles/style.css
+++ b/assets/styles/style.css
@@ -112,7 +112,7 @@
 	
 	.post-excerpt,
 	.post-content {
-		width: 92.5%;
+		width: 75%;
 		margin: 0 auto;
 	}
 	
@@ -126,21 +126,42 @@
 }
 
 .post-header {
-	text-align: center;
 	margin: 0 auto 2.5%;
 }
 
 .post-header-wrap {
-	height: 400px;
+	min-height: 500px;
+	display: flex;
+	flex-wrap: wrap;
+	padding-bottom: 100px;
+	width: 100%;
+	position: relative;
+}
+
+.color-overlay{
+    background: rgba(220, 211, 156, 0.6);
+    overflow: hidden;
+    height: 100%;
+    z-index: 2;
 }
 
 .post_hero_img {
-	opacity: 0.6;
-	background-color: #ffffff;
+	opacity: 0.8;
+	width: 100%;
+	top: 0;
+	bottom: 0;
+	left: 0;
+	position: absolute;
+	z-index: -5;
 }
 
 .post-image {
 	padding-bottom: 1em;
+}
+
+.post-image-list {
+	max-width: 300px;
+	max-height: 300px;
 }
 
 .post-title {
@@ -479,6 +500,10 @@ figure.kg-gallery-card {
 	margin: 1.5% auto;
 }
 
+.orange-highlight {
+	background-color: #DBB497;
+}
+
 .post-meta a {
 	color: #9EABB3;
 	
@@ -486,7 +511,6 @@ figure.kg-gallery-card {
 
 .post-footer {
 	padding-bottom: 1.5%;
-	border-bottom: 1px solid var(--accent-color);
 }
 
 .post-tags {
@@ -602,6 +626,55 @@ figure.kg-gallery-card {
    8. Navigation
    ========================================================================== */
 
+.nav-container {
+	width: 100%;
+}
+
+.nav-container label, #hamburger { 
+		display: none; 
+	}
+
+/** Mobile menu (hamburger) **/
+@media screen and (max-width: 768px){
+  /* Show Hamburger Icon */
+  .nav-container label { 
+    display: inline-block; 
+    color: white;
+    background: #a02620;
+    font-style: normal;
+    font-size: 1.2em;
+    padding: 10px;
+  }
+
+  .nav-container {
+  	position: absolute;
+    top: 150px;
+    z-index: 100;
+    text-align: left;
+  }
+
+  /* Break down menu items into vertical */
+  .nav li a {
+    box-sizing: border-box;
+    display: block;
+    width: 100%;
+    border-top: 1px solid #333;
+  }
+
+  .nav li {
+  	margin: 0;
+  }
+
+  .nav {
+  	text-align: left;
+  }
+
+  /* Toggle Show/Hide Menu */
+  .nav-items { display: none; }
+  .nav-container input:checked ~ .nav-items { display: block; }
+}
+
+
 .nav {
 	width: 100%;	
 	font-size: 1.1em;
@@ -609,7 +682,8 @@ figure.kg-gallery-card {
 	clear: both;
 	list-style: none;
 	padding-left: 0;
-	margin: 1.5% auto 0;
+	margin: auto auto 1%;
+	font-weight: bold;
 	
 	li {
 		display: inline;
@@ -617,7 +691,7 @@ figure.kg-gallery-card {
 	}
 	
 	a {
-		color: var(--text-color);
+		color: var(--button-orange);
 		
 		&:hover {
 			color: var(--accent-color);
@@ -827,8 +901,8 @@ figure.kg-gallery-card {
 --------------------------------------- */
 @media only screen and (min-width: 68.5em) {
 .site-content {
-	width: 60%;
-	max-width: 60rem;
+	width: 70%;
+	max-width: 90rem;
 }
 }
 
