--- a/index.hbs
+++ b/index.hbs
@@ -3,6 +3,17 @@
 {{! The main content area on the homepage }}
 <main class="site-content" role="main">
 
+	<header class="site-hero">
+		<div class="post-header-wrap">
+			<div class="post-header-text">
+				<h1 class="post-title">Security is Awesome</h1>
+				<p> I write about security and privacy. I regularly post original security research, custom tools, and detailed technical guides. </p>
+				
+			</div>
+			
+		</div>
+	</header>
+
 	{{! The tag below includes the post loop - partials/loop.hbs }}
     {{> "loop"}}
 
