--- a/post.hbs
+++ b/post.hbs
@@ -18,25 +18,68 @@
 
 			<header class="post-header">
 				<div class="post-header-wrap">
-					<div class="header-text">
+					<div class="post-header-text">
 						<h1 class="post-title">{{title}}</h1>
-						<span class="post-meta">{{t "Posted on"}} <time datetime="{{date format="YYYY-MM-DD"}}">{{date format='DD MMMM YYYY'}}</time></span>
+						<span class="post-meta orange-highlight"> <time datetime="{{date format="YYYY-MM-DD"}}">{{date format='DD MMMM YYYY'}}</time>
+						</span>
 					</div>
 					{{#if feature_image}}
 					<div class="post_hero_img" style="background-image:url({{feature_image}}">
+						<div class="color-overlay">
+						</div>
 					</div>
 					{{/if}}
 				</div>
-				<!--
-				{{#if feature_image}}<a href="{{url}}"><img class="post-image" src="{{feature_image}}"></a>{{/if}}
-				-->
 			</header>
 
-			<section class="post-content">
-				{{content}}
+			
+			<section class="post-wrapper">
+				<section class="sidebar">
+					<div class="newsletter newsletter-box">
+						<h3>Get the Newsletter</h3>
+						<hr>
+						<p> Stay up to date on new content, security news, and some lovingly crafted emails.</p>
+						<div id="mc_embed_signup">
+						<form action="https://nullsweep.us17.list-manage.com/subscribe/post?u=7ee26c5715f62787b8ac64274&amp;id=df3b939c69" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						    <div id="mc_embed_signup_scroll">
+							<label for="mce-EMAIL">Your Email Address:</label>
+							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+						    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+						    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7ee26c5715f62787b8ac64274_df3b939c69" tabindex="-1" value=""></div>
+						    <div class="clear"><input type="submit" value="Sign Me Up!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+						    </div>
+						</form>
+						</div>
+
+						<!--End mc_embed_signup-->
+					</div>
+				</section>
+				<section class="post-content">
+					{{content}}
+				</section>
 			</section>
 
-			<footer class="post-footer">
+			<footer class="post-footer with-bottom-border">
+				<div class="newsletter newsletter-footer">
+					<h3>Get the Newsletter</h3>
+					<hr>
+					<div class="row">
+					<p> Stay up to date on new content, security news, and some lovingly crafted emails.</p>
+					<div id="mc_embed_signup">
+					<form action="https://nullsweep.us17.list-manage.com/subscribe/post?u=7ee26c5715f62787b8ac64274&amp;id=df3b939c69" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+					    <div id="mc_embed_signup_scroll">
+						<label for="mce-EMAIL">Your Email Address:</label>
+						<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+					    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+					    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7ee26c5715f62787b8ac64274_df3b939c69" tabindex="-1" value=""></div>
+					    <div class="clear"><input type="submit" value="Sign Me Up!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+					    </div>
+					</form>
+					</div>
+
+					<!--End mc_embed_signup-->
+					</div>
+				</div>
 				{{#primary_author}}
 					<section class="author-card cf">
 						{{#if profile_image}}
@@ -58,17 +101,7 @@
 				{{/if}}
 			</footer>
 			<section class="pre-comment">
-			<H2>Comments</H2>
-				<blockquote><em>
-					This comment system is self hosted using the <a href="https://coralproject.net/talk/">Mozilla Coral talk</a> platform, and not connected with any third parties who might collect data. At any time, you can completely delete all comments and data stored, including your email address. I will never send you emails aside from password reset emails you request.
-				</em></blockquote>
 			</section>
-			<div id="coral_talk_stream"></div>
-			<script src="https://comments.nullsweep.com/static/embed.js" async onload="
-			  Coral.Talk.render(document.getElementById('coral_talk_stream'), {
-			    talk: 'https://comments.nullsweep.com/'
-			  });
-			"></script>
 	</article>
 
 	<aside class="post-navigation cf">
