--- a/assets/styles/partials/3 Utilities.css
+++ b/assets/styles/partials/3 Utilities.css
@@ -31,9 +31,18 @@
 	clear: both;
 }
 
-.row {
+.row, .convertible-row {
 	display: flex;
 	flex-direction: row;
+	align-items: flex-start;
+}
+
+/* mobile convertible row */
+@media screen and (max-width: 600px){
+	.convertible-row {
+		display: flex;
+		flex-direction: column;
+	}
 }
 
 .column {
@@ -68,6 +77,22 @@
 
 .grouped-list-item {
 	margin: 10px;
+}
+
+/* mobile list box */
+@media screen and (max-width: 400px){
+	.grouped-list-item {
+		margin: 0px;
+	}
+
+	.post-list-box {
+		padding-left: 5px;
+		padding-right: 5px;
+	}
+
+	.button {
+		padding: 15px;
+	}
 }
 
 .with-bottom-border {
