--- a/assets/styles/partials/6 Content.css
+++ b/assets/styles/partials/6 Content.css
@@ -52,10 +52,19 @@
 }
 
 .post-header-text {
-	width: 50%;
+	width: 100%;
 	text-align: left;
-	padding-top: 100px;
-	padding-left: 50px;
+	/*padding-top: 100px;*/
+}
+
+.post-excerpt {
+	margin-left: 20px;
+}
+
+.post-list-box {
+	border: 1px;
+	padding: 20px;
+	background-image: url('/assets/images/paper_fibers.png');
 }
 
 /* Non-mobile - larger header text*/
@@ -227,29 +236,30 @@ figure.kg-gallery-card {
 	border-radius: 8px;
 }
 
-#mc-embedded-subscribe {
-	background: linear-gradient(#aed452,#8fb925);
-	padding: 0 20px;
-	height: 43px;
-	font-weight: 400;
+.button {
+	/*background: linear-gradient(#aed452,#8fb925);*/
+	font-weight: 700;
+	font-size: 1em;
 	text-align: center;
 	letter-spacing: .2px;
 	border-radius: 4px;
 	white-space: nowrap;
 	text-overflow: ellipsis;
-	color: #fff;
-	margin-top: 15px;
+	color: #000;
+	padding: 15px 30px;
+	background-color: var(--button-yellow);
+	border: 1px;
+	margin-left: 20px;
 }
 
-#mce-EMAIL {
-	padding: 14px 0px;
-	border-radius: 5px;
-	width: 100%;
+.post-button {
+	margin-top: 10px;
 }
 
-.email input[type="text"] {
-	padding-left: 14px;
+#mc_embed_signup_scroll {
+	margin: auto;
 }
+
 
 /* Sidebar - Desktop only */
 @media only screen and (min-width: 50em) {
