--- a/assets/styles/variables.css
+++ b/assets/styles/variables.css
@@ -7,6 +7,8 @@
 	--secondary-accent-color: #007EA6;
 	--highlight-color: RGBA(147, 187, 201, 0.5);
 	--button-orange: #f06142;
+	--button-yellow: #fdcf08;
+	--nav-link: #000;
 	
 	/* Fonts */
 	--font-family: "Oxygen", "Helvetica Neue", "Arial", sans-serif;
