--- a/default.hbs
+++ b/default.hbs
@@ -35,25 +35,63 @@
 	<div class="site-main">
 
 		<header class="site-header row">
-			<div class="column logo">
+			<div class="column header-column">
 				<div class="row logo-row">
 					{{#if @site.logo}}<a href="{{@site.url}}"><img class="blog-logo" src="{{@site.logo}}" alt="Blog Logo" /></a>{{/if}}
-					<img src='{{asset "images/hacker_chibi_nullsweep_256.png"}}' alt="Hacker Chibi"/>
+
+					<div class="nav-container">
+						<!-- [HAMBURGER menu for mobile] -->
+		      			<label for="hamburger">&#9776;</label>
+		      			<input type="checkbox" id="hamburger"/>
+						<div class="nav-items">
+							{{navigation}}
+						</div>
+					</div>
 				</div>
-				<!--
-				{{#if @site.title}}{{#is "home"}}<h1 class="blog-title">{{@site.title}}</h1>{{else}}<div class="blog-title"><a href="{{@site.url}}">{{@site.title}}</a></div>{{/is}}{{/if}}-->
-				<!--
-				{{#if @site.description}}<p class="blog-description">{{@site.description}}</p>{{/if}}
-			-->
-			</div>
-			<div class="nav-container">
-				<!-- [HAMBURGER menu for mobile] -->
-      			<label for="hamburger">&#9776;</label>
-      			<input type="checkbox" id="hamburger"/>
-				<div class="nav-items">
-					{{navigation}}
+					
+				<div class="row main-row">
+					<div class="headermsg">
+						<h1 class="mobile-hide"> SECURITY IS AWESOME </h1>
+						<h2 class="mobile-show">SECURITY IS AWESOME </h2>
+						<p>I write about security and privacy. I regularly post original security research, custom tools, and detailed technical guides.</p>
+					</div>
+					<img src='{{asset "images/hacker_chibi_nullsweepv2_256.png"}}' class="mascot" alt="Hacker Chibi"/>
 				</div>
+				<div class="newsletter-header row">
+					<div class="newlsetter-form">
+						<form action="https://nullsweep.us17.list-manage.com/subscribe/post?u=7ee26c5715f62787b8ac64274&amp;id=df3b939c69" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
+						    <div id="mc_embed_signup_scroll" class="row">
+							<label for="mce-EMAIL" id="newsletter-label">Get the Newsletter</label>
+							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+						    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+						    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7ee26c5715f62787b8ac64274_df3b939c69" tabindex="-1" value=""></div>
+						    <div class="clear"><input type="submit" value="Sign Me Up!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+						    </div>
+						</form>
+					</div>
+					<div class="newsletter-form-mobile">
+						<form action="https://nullsweep.us17.list-manage.com/subscribe/post?u=7ee26c5715f62787b8ac64274&amp;id=df3b939c69" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
+						    <div id="mc_embed_signup_scroll" class="column">
+							<label for="mce-EMAIL" id="newsletter-label">Get the Newsletter</label>
+							<div class="row">
+								<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+							    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+							    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7ee26c5715f62787b8ac64274_df3b939c69" tabindex="-1" value=""></div>
+							    <div class="clear"><input type="submit" value="Sign Up!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+							    </div>
+							</div>
+						</form>
+					</div>
+				</div>
+					<!--
+					{{#if @site.title}}{{#is "home"}}<h1 class="blog-title">{{@site.title}}</h1>{{else}}<div class="blog-title"><a href="{{@site.url}}">{{@site.title}}</a></div>{{/is}}{{/if}}-->
+					<!--
+					{{#if @site.description}}<p class="blog-description">{{@site.description}}</p>{{/if}}
+				-->
 			</div>
+			
 		</header>
 	
 		
