--- a/assets/styles/partials/6 Content.css
+++ b/assets/styles/partials/6 Content.css
@@ -52,9 +52,11 @@
 }
 
 .post-header-text {
-	width: 100%;
+	width: 60%;
 	text-align: left;
-	/*padding-top: 100px;*/
+	padding-top: 100px;
+	padding-left: 50px;
+	z-index: 10;
 }
 
 .post-excerpt {
@@ -285,6 +287,7 @@ figure.kg-gallery-card {
 		margin-top: -100px;
 		border-radius: 8px;
 		height: 330px;
+		z-index: 5;
 	}
 }
 
