--- a/post.hbs
+++ b/post.hbs
@@ -24,12 +24,35 @@
 						</span>
 					</div>
 					{{#if feature_image}}
-					<img class="post_hero_img" src="{{feature_image}}"/>
+					<div class="post_hero_img" style="background-image:url({{feature_image}})">
+						<div class="color-overlay">
+						</div>
+					</div>
 					{{/if}}
 				</div>
 			</header>
 			
 			<section class="post-wrapper">
+				<section class="sidebar">
+					<div class="newsletter newsletter-box">
+						<h3>Get the Newsletter</h3>
+						<hr>
+						<p> Stay up to date on new content, security news, and some lovingly crafted emails.</p>
+						<div id="mc_embed_signup">
+						<form action="https://nullsweep.us17.list-manage.com/subscribe/post?u=7ee26c5715f62787b8ac64274&amp;id=df3b939c69" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+						    <div id="mc_embed_signup_scroll">
+							<label for="mce-EMAIL">Your Email Address:</label>
+							<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+						    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+						    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7ee26c5715f62787b8ac64274_df3b939c69" tabindex="-1" value=""></div>
+						    <div class="clear"><input type="submit" value="Sign Me Up!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+						    </div>
+						</form>
+						</div>
+
+						<!--End mc_embed_signup-->
+					</div>
+				</section>
 
 				<section class="post-content">
 					{{content}}
