Add mobile newsletter & fix image size

--- a/default.hbs
+++ b/default.hbs
@@ -58,7 +58,21 @@
 					<img src='{{asset "images/hacker_chibi_nullsweepv2_256.png"}}' class="mascot" alt="Hacker Chibi"/>
 				</div>
 				<div class="newsletter-header row">
-					
+
+					<div class="newsletter-form-mobile">
+						<form action="https://nullsweep.us17.list-manage.com/subscribe/post?u=7ee26c5715f62787b8ac64274&amp;id=df3b939c69" method="post" id="mc-embedded-subscribe-form" name="mc-embedded-subscribe-form" class="validate" target="_blank" novalidate>
+
+						    <div id="mc_embed_signup_scroll" class="column">
+							<label for="mce-EMAIL" id="newsletter-label">Get the Newsletter</label>
+							<div class="row">
+								<input type="email" value="" name="EMAIL" class="email" id="mce-EMAIL" placeholder="email address" required>
+							    <!-- real people should not fill this in and expect good things - do not remove this or risk form bot signups-->
+							    <div style="position: absolute; left: -5000px;" aria-hidden="true"><input type="text" name="b_7ee26c5715f62787b8ac64274_df3b939c69" tabindex="-1" value=""></div>
+							    <div class="clear"><input type="submit" value="Sign Up!" name="subscribe" id="mc-embedded-subscribe" class="button"></div>
+							    </div>
+							</div>
+						</form>
+					</div>
 				</div>
 					<!--
 					{{#if @site.title}}{{#is "home"}}<h1 class="blog-title">{{@site.title}}</h1>{{else}}<div class="blog-title"><a href="{{@site.url}}">{{@site.title}}</a></div>{{/is}}{{/if}}-->
